[gd_scene load_steps=11 format=2]

[ext_resource path="res://Misc/Font/SaveStar.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Pause/Save Menu Base.png" type="Texture" id=2]
[ext_resource path="res://Misc/Font/Item Info.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Pause/Member Display.png" type="Texture" id=4]
[ext_resource path="res://UI/Cursor.png" type="Texture" id=5]
[ext_resource path="res://Assets/General/Misc Items SS.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UI/Save_Cursor.gd" type="Script" id=7]
[ext_resource path="res://UI/Menu Cursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/UI/SaveMenu.gd" type="Script" id=9]
[ext_resource path="res://Scripts/UI/SaveSlot.gd" type="Script" id=10]

[node name="SaveMenu" type="Node2D"]
script = ExtResource( 9 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="SaveSelection" type="VBoxContainer" parent="."]
margin_left = -294.0
margin_top = -80.0
margin_right = -254.0
margin_bottom = 437.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 1.1, 1.1 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 112

[node name="1" type="Label" parent="SaveSelection"]
margin_left = 19.0
margin_right = 20.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "1"
clip_text = true
script = ExtResource( 10 )

[node name="2" type="Label" parent="SaveSelection"]
margin_left = 19.0
margin_top = 126.0
margin_right = 20.0
margin_bottom = 140.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "2"
clip_text = true
script = ExtResource( 10 )

[node name="3" type="Label" parent="SaveSelection"]
margin_left = 19.0
margin_top = 252.0
margin_right = 20.0
margin_bottom = 266.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "3"
clip_text = true
script = ExtResource( 10 )

[node name="MenuCursor" parent="SaveSelection" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 378.0
margin_right = 40.0
margin_bottom = 403.0
script = ExtResource( 7 )
menu_parent_path = NodePath("..")
cursor_offset = Vector2( 17, 2.5 )

[node name="Save Star" type="Label" parent="."]
margin_left = -105.0
margin_top = -226.0
margin_right = 99.0
margin_bottom = -191.0
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Save Menu"
align = 1

[node name="Save1" type="Node2D" parent="."]

[node name="Location" type="Label" parent="Save1"]
margin_left = -155.0
margin_top = -91.5
margin_right = -59.0
margin_bottom = -64.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 9
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "-"
align = 1
autowrap = true

[node name="Level" type="Label" parent="Save1"]
margin_left = -148.0
margin_top = -57.0
margin_right = -55.0
margin_bottom = -43.0
custom_fonts/font = ExtResource( 3 )
text = "Level:"

[node name="Level_info" type="Label" parent="Save1"]
margin_left = -96.0
margin_top = -57.0
margin_right = -61.0
margin_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "-"
align = 1

[node name="Initial" type="Sprite" parent="Save1"]
modulate = Color( 1, 0.94902, 1, 1 )
position = Vector2( -203, -70 )
texture = ExtResource( 5 )

[node name="Display" type="Sprite" parent="Save1"]
visible = false
position = Vector2( -193, -65 )
texture = ExtResource( 4 )
hframes = 5

[node name="Seed1" type="Sprite" parent="Save1"]
visible = false
position = Vector2( -18, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed2" type="Sprite" parent="Save1"]
visible = false
position = Vector2( 18, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed3" type="Sprite" parent="Save1"]
visible = false
position = Vector2( 54, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed4" type="Sprite" parent="Save1"]
visible = false
position = Vector2( 90, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed5" type="Sprite" parent="Save1"]
visible = false
position = Vector2( 126, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed6" type="Sprite" parent="Save1"]
visible = false
position = Vector2( 162, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed7" type="Sprite" parent="Save1"]
visible = false
position = Vector2( 198, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Save2" type="Node2D" parent="."]
position = Vector2( 0, 137 )

[node name="Location" type="Label" parent="Save2"]
margin_left = -155.0
margin_top = -91.5
margin_right = -59.0
margin_bottom = -64.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "-"
align = 1
autowrap = true

[node name="Level" type="Label" parent="Save2"]
margin_left = -148.0
margin_top = -57.0
margin_right = -55.0
margin_bottom = -43.0
custom_fonts/font = ExtResource( 3 )
text = "Level:"

[node name="Level_info" type="Label" parent="Save2"]
margin_left = -96.0
margin_top = -57.0
margin_right = -61.0
margin_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "-"
align = 1

[node name="Initial" type="Sprite" parent="Save2"]
modulate = Color( 1, 0.94902, 1, 1 )
position = Vector2( -203, -70 )
texture = ExtResource( 5 )

[node name="Display" type="Sprite" parent="Save2"]
visible = false
position = Vector2( -193, -65 )
texture = ExtResource( 4 )
hframes = 5

[node name="Seed1" type="Sprite" parent="Save2"]
visible = false
position = Vector2( -18, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed2" type="Sprite" parent="Save2"]
visible = false
position = Vector2( 18, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed3" type="Sprite" parent="Save2"]
visible = false
position = Vector2( 54, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed4" type="Sprite" parent="Save2"]
visible = false
position = Vector2( 90, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed5" type="Sprite" parent="Save2"]
visible = false
position = Vector2( 126, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed6" type="Sprite" parent="Save2"]
visible = false
position = Vector2( 162, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed7" type="Sprite" parent="Save2"]
visible = false
position = Vector2( 198, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Save3" type="Node2D" parent="."]
position = Vector2( 0, 274 )

[node name="Location" type="Label" parent="Save3"]
margin_left = -155.0
margin_top = -91.5
margin_right = -59.0
margin_bottom = -64.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "-"
align = 1
autowrap = true

[node name="Level" type="Label" parent="Save3"]
margin_left = -148.0
margin_top = -57.0
margin_right = -55.0
margin_bottom = -43.0
custom_fonts/font = ExtResource( 3 )
text = "Level:"

[node name="Level_info" type="Label" parent="Save3"]
margin_left = -96.0
margin_top = -57.0
margin_right = -61.0
margin_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "-"
align = 1

[node name="Initial" type="Sprite" parent="Save3"]
modulate = Color( 1, 0.94902, 1, 1 )
position = Vector2( -203, -70 )
texture = ExtResource( 5 )

[node name="Display" type="Sprite" parent="Save3"]
visible = false
position = Vector2( -193, -65 )
texture = ExtResource( 4 )
hframes = 5

[node name="Seed1" type="Sprite" parent="Save3"]
visible = false
position = Vector2( -18, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed2" type="Sprite" parent="Save3"]
visible = false
position = Vector2( 18, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed3" type="Sprite" parent="Save3"]
visible = false
position = Vector2( 54, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed4" type="Sprite" parent="Save3"]
visible = false
position = Vector2( 90, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed5" type="Sprite" parent="Save3"]
visible = false
position = Vector2( 126, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed6" type="Sprite" parent="Save3"]
visible = false
position = Vector2( 162, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Seed7" type="Sprite" parent="Save3"]
visible = false
position = Vector2( 198, -75 )
texture = ExtResource( 6 )
hframes = 10
vframes = 3

[node name="Camera2D" type="Camera2D" parent="."]
current = true
